add payment reference to Order; implement methods for associating and validating payment reference, and update Order status handling